5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1800_2572.log
== TEST (2019-06-12 16:37:29) 
-- CODE:
from numpy import*
a = array(eval(input("matriculas:")))
b = 0
for y in a:
	if y%2 !=0
		b = b+ 1
y = zeros(b, dtype=int)
x = 0 
g = 0
for r in a:
	if r%2 != 0:
		p[x] = a[g]
		x = x + 1
	g = g + 1
print(p)








-- ERROR:
File "XXXX", line 5
    if y%2 !=0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:37:56) 
-- CODE:
from numpy import*
a = array(eval(input("matriculas:")))
b = 0
for y in a:
	if (y%2 !=0):
		b = b+ 1
y = zeros(b, dtype=int)
x = 0 
g = 0
for r in a:
	if r%2 != 0:
		p[x] = a[g]
		x = x + 1
	g = g + 1
print(p)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:38:10) 
-- CODE:
from numpy import*
a = array(eval(input("matriculas:")))
b = 0
for y in a:
	if (y%2 !=0):
		b = b+ 1
p = zeros(b, dtype=int)
x = 0 
g = 0
for r in a:
	if r%2 != 0:
		p[x] = a[g]
		x = x + 1
	g = g + 1
print(p)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:38:18) 
-- CODE:
from numpy import*
a = array(eval(input("matriculas:")))
b = 0
for y in a:
	if (y%2 !=0):
		b = b+ 1
p = zeros(b, dtype=int)
x = 0 
g = 0
for r in a:
	if r%2 != 0:
		p[x] = a[g]
		x = x + 1
	g = g + 1
print(p)








-- EXECUTION TIME:
1.09596
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
